--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,4 +14,9 @@
         {% if user.is_staff %} <p><a href="{% url "admin:index" %}" target="_blank"> Admin Panel</a></p> {% endif %}
         <p><a href="{% url "logout" %}"> Logout</a></p>
     </div>
+    <div class="module">
+        <select class="js-example-data-ajax form-control">
+            <option value="3620194" selected="selected">select2/select2</option>
+        </select>
+    </div>
 {% endblock %}
