--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <!-- Select2 -->
     <link href="{% static 'libs/select2/css/select2.css' %}" rel="stylesheet"/>
     <script src="{% static 'libs/select2/js/select2.js' %}"></script>
+    <!--Rating stars -->
+    <link href="{% static 'libs/star-rating/star-rating.css' %}" rel="stylesheet">
+    <script src="{% static 'libs/star-rating/star-rating.js' %}"></script>
 </head>
 <body>
 <div id="header">
