--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,10 +23,9 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     background: #efefef;
-    width: 100%;
-    overflow: auto;
     padding: 20px 0 20px 40px;
     margin: 0;
+    text-align: left;
 }
 
 .module {
@@ -186,8 +185,6 @@ a.secondary-button {
     margin: 10px 0;
 }
 
-
-
 input[type=submit]:hover, a.button:hover {
     background: #96236e;
 }
@@ -310,3 +307,22 @@ ul#course-modules li:hover {
     padding-right: 0;
 }
 
+.star-rating {
+    position: fixed;
+    top: 100px;
+}
+.select2-container {
+    position: relative;
+    top: 10%;
+    left: 60%;
+    margin: 10px;
+    border-radius: 5px;
+
+}
+#search_button {
+    position: absolute;
+    margin-top: 5px;
+    left: 80%;
+    align-content: end;
+    width: 70px;
+}
