--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
 <div id="content">
     <form method="post" action="{% url 'content:content_search_go' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        <select class="js-example-data-ajax form-control" name="search_bar" id="search_bar"> </select>
-        <input type="submit" value="Go">
+        <select class="js-example-data-ajax form-control" name="search_bar" id="search_bar"></select>
+        <input id="search_button" type="submit" value="Go">
     </form>
     {% block content %}
     {% endblock %}
