--- a/static/css/base.css
+++ b/static/css/base.css
@@ -254,63 +254,11 @@ ul#course-modules li:hover {
     padding-left: 20px;
 }
 
-#chat {
-    top: 64px;
-    bottom: 0;
-    position: fixed;
-    width: 100%;
-    overflow-y: scroll;
-    padding-bottom: 150px;
-}
-
-#chat .message {
-    background: #efefef;
-    padding: 10px 20px;
-    border-radius: 4px;
-    width: auto;
-    display: inline;
-    float: left;
-    margin: 10px 10px 0;
-    min-width: 440px;
-    clear: both;
-}
-
-#chat .message.me {
-    display: inline;
-    float: right;
-    background: #DCEDE0;
-    color: #56A668;
-}
-
-#chat .date {
-    color: #aaa;
-    font-style: italic;
-    font-size: 12px;
-}
-
-#chat-input {
-    position: absolute;
-    bottom: 0;
-    background: #efefef;
-    width: 100%;
-    padding-top: 20px;
-}
-
-#chat-input input {
-    width: 96%;
-    position: left;
-    float: left;
-    display: inline;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-left: 0;
-    padding-right: 0;
-}
-
 .star-rating {
     position: fixed;
     top: 100px;
 }
+
 .select2-container {
     position: relative;
     top: 10%;
@@ -319,6 +267,7 @@ ul#course-modules li:hover {
     border-radius: 5px;
 
 }
+
 #search_button {
     position: absolute;
     margin-top: 5px;
@@ -326,3 +275,19 @@ ul#course-modules li:hover {
     align-content: end;
     width: 70px;
 }
+
+#content .box {
+    display: table;
+}
+#content .box .box-row {
+    display: table-row;
+}
+#content .box .box-cell {
+    display: table-cell;
+
+}
+.left_div {
+    padding: 40px;
+}
+
+
