--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,13 @@
     </ul>
 </div>
 <div id="content">
-    <form method="post" action="{% url 'content:content_search_go' %}" enctype="multipart/form-data">
-        {% csrf_token %}
-        <select class="js-example-data-ajax form-control" name="search_bar" id="search_bar" required></select>
-        <input id="search_button" type="submit" value="Go">
-    </form>
+    {% if request.user.is_authenticated %}
+        <form method="post" action="{% url 'content:content_search_go' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <select class="js-example-data-ajax form-control" name="search_bar" id="search_bar" required></select>
+            <input id="search_button" type="submit" value="Go">
+        </form>
+    {% endif %}
     {% block content %}
     {% endblock %}
 </div>
