--- a/templates/base.html
+++ b/templates/base.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8"/>
     <title>{% block title %}Entertainment DB{% endblock %}</title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet">
-    <link href="{% static 'css/table.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/table.css' %}" rel="stylesheet" type="text/css">
     <!-- jQuery -->
     <script src="{% static 'libs/jquery/jquery.min.js' %}"></script>
     <!-- Select2 -->
-    <link href="{% static 'libs/select2/css/select2.css' %}" rel="stylesheet"/>
+    <link href="{% static 'libs/select2/css/select2.css' %}" rel="stylesheet" type="text/css"/>
     <script src="{% static 'libs/select2/js/select2.js' %}"></script>
     <!--Rating stars -->
-    <link href="{% static 'libs/star-rating/star-rating.css' %}" rel="stylesheet">
+    <link href="{% static 'libs/star-rating/star-rating.css' %}" rel="stylesheet" type="text/css">
     <script src="{% static 'libs/star-rating/star-rating.js' %}"></script>
     <!-- Data Table -->
     <link rel="stylesheet"
-          href="{% static 'libs/datatables-1.10.20/plugins/responsive-2.2.3/css/responsive.bootstrap4.min.css' %}"/>
+          href="{% static 'libs/datatables-1.10.20/plugins/responsive-2.2.3/css/responsive.bootstrap4.min.css' %}"
+          type="text/css"/>
     <script src="{% static 'libs/datatables-1.10.20/js/jquery.dataTables.js' %}"></script>
     <script src="{% static 'libs/datatables-1.10.20/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'libs/datatables-1.10.20/plugins/responsive-2.2.3/js/dataTables.responsive.min.js' %}"></script>
