--- a/static/css/base.css
+++ b/static/css/base.css
@@ -270,7 +270,7 @@ ul#course-modules li:hover {
 
 #search_button {
     position: absolute;
-    margin-top: 16px;
+    margin-top: 15px;
     left: 80%;
     align-content: end;
     width: 70px;
@@ -320,3 +320,9 @@ ul#course-modules li:hover {
     left: 30%;
 }
 
+#search_bar {
+    position: absolute;
+    top: 12%;
+    left: 68%;
+
+}
